Fixed breadcrumb alignment

--- a/stylesheets/partials/features/_breadcrumbs.scss
+++ b/stylesheets/partials/features/_breadcrumbs.scss
@@ -17,11 +17,15 @@
 		&:first-child {
 			margin-left: 0;
 
-			&::before {				
+			&:before {				
 				content: "\f015";
 				display: inline-block;
 				font-family: FontAwesome;
 				margin-right: .5em;
+			}
+
+			&:after {
+				top: -7px;				
 			}
 		}
 
@@ -32,7 +36,6 @@
 			font-size: 2em;
 			position: absolute;
 			right: -28px;
-			top: -7px;
 		}
 
 		&:last-child {
